<?xml version="1.0" encoding="utf-8"?>
<!--

    This file is part of Whisper To Input, see <https://github.com/j3soon/whisper-to-input>.

    Copyright (c) 2023-2025 Yan-Bin Diau, Johnson Sun

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <https://www.gnu.org/licenses/>.

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyboard_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@drawable/keyboard_bar_background"
    android:clipToPadding="false"
    android:paddingTop="@dimen/keyboard_bar_padding_top"
    android:paddingBottom="@dimen/keyboard_bar_padding_bottom">

    <View
        android:id="@+id/view_top_bar"
        android:layout_width="@dimen/keyboard_top_handle_width"
        android:layout_height="@dimen/keyboard_top_handle_height"
        android:layout_marginTop="@dimen/keyboard_top_handle_margin_top"
        android:alpha="0.5"
        android:background="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/RegularText"
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyboard_status_margin_top"
        android:layout_marginBottom="@dimen/keyboard_status_margin_bottom"
        android:text="@string/whisper_to_input"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_mic_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top_bar" />

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_space_bar"
        android:layout_width="@dimen/keyboard_space_bar_width"
        android:layout_height="@dimen/keyboard_key_touch_size"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="@dimen/keyboard_key_icon_padding"
        android:background="@drawable/space_bar_background"
        android:contentDescription="@string/desc_space_bar"
        android:scaleType="fitCenter"
        android:src="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mic_frame"/>

    <FrameLayout
        android:id="@+id/btn_mic_frame"
        android:layout_width="@dimen/keyboard_mic_frame_size"
        android:layout_height="@dimen/keyboard_mic_frame_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_status">

        <ImageButton
            android:id="@+id/btn_mic"
            android:layout_width="@dimen/keyboard_mic_size"
            android:layout_height="@dimen/keyboard_mic_size"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/fab_background"
            android:contentDescription="@string/start_speech_to_text"
            android:elevation="@dimen/keyboard_mic_elevation"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/mic_idle" />

        <ProgressBar
            android:id="@+id/pb_waiting_icon"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/keyboard_waiting_icon_size"
            android:layout_height="@dimen/keyboard_waiting_icon_size"
            android:layout_gravity="center_horizontal|center_vertical"
            android:clickable="false"
            android:focusable="false"
            android:indeterminateTint="?attr/colorPrimary"
            android:visibility="invisible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mic_ripples"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/mic_ripple_0"
                android:layout_width="@dimen/keyboard_mic_ripple_0_size"
                android:layout_height="@dimen/keyboard_mic_ripple_0_size"
                android:alpha="0"
                android:src="@drawable/mic_ripple_0"
                android:tint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mic_ripple_1"
                android:layout_width="@dimen/keyboard_mic_ripple_1_size"
                android:layout_height="@dimen/keyboard_mic_ripple_1_size"
                android:alpha="0"
                android:src="@drawable/mic_ripple_1"
                android:tint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mic_ripple_2"
                android:layout_width="@dimen/keyboard_mic_ripple_2_size"
                android:layout_height="@dimen/keyboard_mic_ripple_2_size"
                android:alpha="0"
                android:src="@drawable/mic_ripple_2"
                android:tint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mic_ripple_3"
                android:layout_width="@dimen/keyboard_mic_ripple_3_size"
                android:layout_height="@dimen/keyboard_mic_ripple_3_size"
                android:alpha="0"
                android:src="@drawable/mic_ripple_3"
                android:tint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>


    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_enter"
        android:layout_width="@dimen/keyboard_key_touch_size"
        android:layout_height="@dimen/keyboard_key_touch_size"
        android:layout_marginEnd="@dimen/keyboard_key_margin"
        android:padding="@dimen/keyboard_key_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/start_transcribing"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_enter"
        app:layout_constraintBottom_toBottomOf="@+id/btn_space_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_space_bar" />

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/keyboard_key_touch_size"
        android:layout_height="@dimen/keyboard_key_touch_size"
        android:layout_marginEnd="@dimen/keyboard_key_margin"
        android:padding="@dimen/keyboard_key_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription=""
        android:scaleType="fitCenter"
        android:src="@drawable/btn_cancel"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/btn_mic_frame"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mic_frame"
        app:layout_constraintEnd_toStartOf="@+id/btn_mic_frame" />

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_retry"
        android:layout_width="@dimen/keyboard_key_touch_size"
        android:layout_height="@dimen/keyboard_key_touch_size"
        android:layout_marginEnd="@dimen/keyboard_key_margin"
        android:padding="@dimen/keyboard_key_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription=""
        android:scaleType="fitCenter"
        android:src="@drawable/btn_retry"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/btn_mic_frame"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mic_frame"
        app:layout_constraintEnd_toStartOf="@+id/btn_mic_frame" />

    <com.example.whispertoinput.keyboard.BackspaceButton
        style="@style/RegularImage"
        android:id="@+id/btn_backspace"
        android:layout_width="@dimen/keyboard_key_touch_size"
        android:layout_height="@dimen/keyboard_key_touch_size"
        android:layout_marginStart="@dimen/keyboard_key_margin"
        android:padding="@dimen/keyboard_key_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/backspace_button_hint"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_backspace"
        app:layout_constraintStart_toEndOf="@+id/btn_mic_frame"
        app:layout_constraintTop_toTopOf="@+id/btn_mic_frame"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mic_frame"/>

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_previous_ime"
        android:layout_width="@dimen/keyboard_key_touch_size"
        android:layout_height="@dimen/keyboard_key_touch_size"
        android:layout_marginStart="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="@dimen/keyboard_key_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_previous_ime_hint"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_previous_ime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top_bar" />

    <ImageButton
        style="@style/RegularImage"
        android:id="@+id/btn_settings"
        android:layout_width="@dimen/keyboard_settings_icon_size"
        android:layout_height="@dimen/keyboard_settings_icon_size"
        android:layout_marginEnd="@dimen/keyboard_key_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_previous_ime_hint"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_status"
        app:layout_constraintBottom_toBottomOf="@id/label_status"/>
</androidx.constraintlayout.widget.ConstraintLayout>
